--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~13.1.0",
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
+    "idb": "^7.0.0",
     "ngx-bootstrap": "^8.0.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
